<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".OrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MAKANAN"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/mie_ayam_baso"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlack"
            android:text="Rp. 10.000"/>

        <EditText
            android:id="@+id/menu_makan_satu"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/mie_yamin_baso"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlack"
            android:text="Rp. 12.000"/>

        <EditText
            android:id="@+id/menu_makan_dua"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/mie_pangsit_baso"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlack"
            android:text="Rp. 15.000"/>

        <EditText
            android:id="@+id/menu_makan_tiga"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="MINUMAN"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/es_teh_manis"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlack"
            android:text="Rp. 5.000"/>

        <EditText
            android:id="@+id/menu_minum_satu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/aneka_jus"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlack"
            android:text="Rp. 7.000"/>

        <EditText
            android:id="@+id/menu_minum_dua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/air_mineral"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlack"
            android:text="Rp. 3.000"/>

        <EditText
            android:id="@+id/menu_minum_tiga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pesan"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="pesan" />

    </LinearLayout>

</LinearLayout>